updated login multirol

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=backend_security_service
-sonar.projectName=backend_security_service
+sonar.projectKey=security_service_backend
+sonar.projectName=security_service_backend
 sonar.projectVersion=1.0
 sonar.host.url=http://localhost:9000
-sonar.login=sqp_7abd98e6455cd51517e15f5fc4d02e1297fe2a0f
+sonar.login=${env.SONAR_TOKEN}
 sonar.language=go
 sonar.sources=.
 sonar.exclusions=**/*_test.go,.dockerignore
